# konan-housing-model

./: .dockerignore  .gitignore  .konan.example  CHANGELOG.md  Dockerfile  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: docker.yml  quality.yml  release.yml
app/: requirements.txt
app/artifacts/: model.pkl  one_hot_encoder.pkl
app/src/: housing_enums.py  retrain.py  server.py  test.py
app/src/utils/: encoding.py  metrics.py  pipeline.py  regressors.py
artifacts/svr/: ordinal_encoder.pkl
artifacts/xgboost/: model.pkl
data/: metadata.yaml  metadata.yml
data/final/: test.csv  train.csv  val.csv
data/kaggle/: data_description.txt
deployment/: .env.example
housing-model/src/app/: retrain.py
housing-model/src/playground/utils/: encoding.py  metrics.py  pipeline.py  regressors.py
playground/src/: train.py  utils  validate.py
src/app/: retrain.py  server.py
src/playground/: data_preprocessing.py  file_handling.py  train.py  validate.py
